--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node bin/www",
     "dev": "cross-env NODE_ENV=dev ./node_modules/.bin/nodemon bin/www",
-    "prd": "cross-env NODE_ENV=prd pm2 start bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prd": "cross-env NODE_ENV=production pm2 start pm2.config.json"
   },
   "dependencies": {
     "debug": "^4.1.1",
